--- a/ProyectoFinal_ActivosFijos/Views/Register/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Register/Index.cshtml
@@ -9,11 +9,11 @@
 
     <style>
         body {
-            background-image: url('https://img.freepik.com/free-photo/particle-view-modern-luxury-white-car-parked-indoors-daytime_146671-16450.jpg?t=st=1723180057~exp=1723183657~hmac=10394f5939ad50260d3334714553c0e84262786f710b1d6e7f4f26f6c5f837ff&w=1380');
+            background-image: url('https://img.freepik.com/free-vector/gradient-liquid-abstract-background_23-2148917280.jpg?w=1380&t=st=1723601297~exp=1723601897~hmac=1d08567b37b1e8a1be391fecb690827a90b729a01434515f3d0fa434f5a79af9');
             background-size: cover;
             background-position: center;
             background-color: white;
-            font-family: Roboto, sans-serif;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
 
         .background-container {
@@ -25,7 +25,7 @@
         }
 
         .form-container {
-            position: relative;
+          
             background: transparent;
             border: 2px solid rgba(255, 255, 255, .5);
             border-radius: 20px;
@@ -38,9 +38,9 @@
 
             .form-container h2 {
                 margin-bottom: 20px;
-                font-family: Roboto, sans-serif;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
                 text-align: center;
-                color: #343a40;
+                color: white;
             }
 
         .form-control {
@@ -62,21 +62,21 @@
         }
 
         .boton-IS {
-            background-color: #078EBD;
+            background-color: #969696;
             color: white;
         }
 
             .boton-IS:hover {
-                background-color: #005696;
+                background-color: #707070;
             }
 
         .boton-RG {
-            background-color: #042f5c;
+            background-color: #f70a0a;
             color: white;
         }
 
             .boton-RG:hover {
-                background-color: #022040;
+                background-color: #bc0f0f;
             }
     </style>
 
