--- a/ProyectoFinal_ActivosFijos/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Shared/_Layout.cshtml
@@ -3,23 +3,68 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Toyota</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            text-decoration: none;
+            list-style: none;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+        a{
+            text-decoration: none;
+        }
+        .header{
+            position: fixed;
+            height: 80px;
+            width: 100%;
+            z-index: 100;
+            padding: 0 20px;
+
+        }
+        .nav{
+            max-width: 1100px;
+            width: 100%;
+            margin: 0 auto;
+        }
+        .nav, .nav_items{
+            display: flex;
+            height: 100%;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .nav_logo {
+            font-size: 25px;
+            color: #f8f9fa;
+        }
+        .nav-item, nav-item dropdown {
+            column-gap: 25px;
+          
+        }
+        .nav-link, nav-link dropdown-toggle:hover {
+            color: #a30606;
+        }
+        
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">ActivosFijos</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
+    <header class="header">
+        <nav class="nav">
+            <a class="nav_logo" href="#">Toyota</a>
+            <ul class="nav_items">
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index", "Carrito")">
                         <img src="~/images/cart-icon.png" alt="Carrito" style="width: 24px; height: 24px;" />
@@ -36,27 +81,16 @@
                     </div>
                 </li>
             </ul>
-        </div>
-    </nav>
 
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav2" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between" id="navbarNav2">
-                <ul class="navbar-nav flex-grow-1">
-                </ul>
-            </div>
-        </div>
-    </nav>
+        </nav>
+
+    </header>
+
 
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Toyota</p>
-        </footer>
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
