--- a/ProyectoFinal_ActivosFijos/Views/Login/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Login/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@model ProyectoFinal_ActivosFijos.Models.ViewModel.UsuariosViewModel
 @{
     ViewBag.Title = "Login";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <style>
@@ -11,7 +10,7 @@
         padding: 0;
         color: #f8f9fa; /* Cambia el color del texto a blanco */
         overflow: hidden; /* Evita el scroll en la vista */
-        background-image: url('https://img.freepik.com/free-vector/gradient-liquid-abstract-background_23-2148917280.jpg?w=1380&t=st=1723601297~exp=1723601897~hmac=1d08567b37b1e8a1be391fecb690827a90b729a01434515f3d0fa434f5a79af9');
+        background-image: url('/images/BackgroundToyota.jpg');
         background-size: cover;
         background-position: center;
         background-color: white;
