--- a/ProyectoFinal_ActivosFijos/Views/Shared/_AdminLayout.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Shared/_AdminLayout.cshtml
@@ -92,7 +92,7 @@
             <a href="" class="logo"<h3>Toyota </h3></a>
             <ul class="nav-link">
                 <li><a href="" class="active">Home</a></li>
-                <li><a href="" >Usuarios</a></li>
+                <li><a href="@Url.Action("Index", "Usuario")">Usuarios</a></li>
                 <li><a href="">Repuestos</a></li>
                 <li><a href="">Carros</a></li>
             </ul>
